# FetchSslCert-Android

./: README.md
gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore  CMakeLists.txt  build.gradle
lib/src/androidTest/java/ir/alireza/lib/opensslhandle/: ConditionCheck.kt  GetCertTest.kt  Halt.java  SaveCertTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: native-lib.cpp
lib/src/main/cpp/boringssl/: .ninja_deps  .ninja_log  CMakeLists.txt  android_gradle_build.json  build.ninja  rules.ninja
lib/src/main/cpp/boringssl/crypto/: .ninja_deps  .ninja_log  build.ninja  internal.h  rules.ninja
lib/src/main/cpp/boringssl/crypto/err/: internal.h
lib/src/main/cpp/boringssl/decrepit/: decrepit_test
lib/src/main/cpp/boringssl/include/openssl/: asn1.h  base.h  bio.h  bn.h  buf.h  bytestring.h  crypto.h  dh.h  dsa.h  ec.h  ec_key.h  ecdh.h  ecdsa.h  engine.h  err.h  hkdf.h  hmac.h  lhash.h  md4.h  md5.h  mem.h  obj.h  pem.h  pkcs7.h  pkcs8.h  poly1305.h  pool.h  rand.h  ripemd.h  rsa.h  sha.h  span.h  ssl.h  ssl3.h  stack.h  tls1.h  type_check.h  x509.h  x509_vfy.h  x509v3.h
lib/src/main/cpp/boringssl/ssl/: internal.h
lib/src/main/cpp/boringssl/ssl/test/: bssl_shim
lib/src/main/cpp/boringssl/tool/: bssl
lib/src/main/java/ir/alireza/lib/opensslhandle/: FileHelper.kt  JniHandler.kt  OpenSSLHandler.kt
lib/src/main/java/ir/alireza/lib/opensslhandle/customException/: FetchException.kt  SaveException.kt
lib/src/main/java/ir/alireza/lib/opensslhandle/interfaces/: INFGetResualt.kt
lib/src/test/java/ir/alireza/lib/opensslhandle/: ExampleUnitTest.kt
